@@ -1,5 +1,10 @@
 2007-05-29 Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
+	* libavogadro/src/tools/drawtool.*: DrawTool now allows you to
+	generate molecules from smiles and place them in the GLWidget.
+	
+2007-05-29 Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
 	* libavogadro/src/tools/drawtool.*: Added a QLineEdit and QPushButton
 	to generate 3D structures from the draw tool. Geoff and I talked about
 	this before. But I don't know how to get access to the molecule from
